--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -1,28 +1,8 @@
-<doctype html>
-<html>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Actually Random</title>
-
-    <!-- Bootstrap -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-		<div class="container">
+{% extends "base.html" %}
+{% block title %}
 			<h1>Choose a playlist to randomize. For reals.</h1>
+{% endblock %}
+{% block data %}
 			<!-- Single button -->
 			<div class="btn-group">
 				<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -34,16 +14,4 @@
 					{% endfor %}
 				</ul>
 			</div>
-			<!-- <ul class="nav nav-pills nav-stacked"> -->
-			<!-- {% for item in sorted_array %} -->
-			<!-- <li role="presentation"><a href="#">{{ item }}</a></li> -->
-			<!-- {% endfor %} -->
-			<!-- </ul> -->
-		</div>
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="/static/js/bootstrap.min.js"></script>
-  </body>
-</html>
+{% endblock %}
