Fix templates. Add navbar with home buttons.

--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}
+{% block pagename %}
 <div class="jumbotron">
 	<div class="row">
 		<div class="col-md-6">
