--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}
+{% block pagename %}
 			<h1>Choose a playlist to randomize. For reals.</h1>
 {% endblock %}
 {% block data %}
