--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,32 @@
 {% extends "bootstrap/base.html" %}
-	{% block content %}
 		{% block title %}
+		Actually Random
+		{% endblock %}
+		{% block navbar %}
+		<div class="navbar navbar-inverse" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+				  </button>
+					<a class="navbar-brand" href="{{ url_for("index") }}">Actually Random</a>
+				</div>
+				<div class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li><a href="{{ url_for("index") }}">Home</a></li>
+				  </ul>
+				</div>
+		  </div>
+		</div>
+		{% endblock %}
+	{% block content %}
+	<div class="container">
+		{% block pagename %}
 		{% endblock %}
 		{% block data %}
 		{% endblock %}
+  </div>
 	{% endblock %}
