--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -4,7 +4,7 @@
 	<div class="row">
 		<div class="col-md-6">
 			<h1>{{ name }}</h1>
-			<p>Enter a name to save new playlist:</p>
+			<p>Enter a name for the new playlist:</p>
 			{% import "bootstrap/wtf.html" as wtf %}
 			{{ wtf.quick_form(form) }}
 		</div>
