--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -1,17 +1,19 @@
 {% extends "base.html" %}
 {% block pagename %}
-			<h1>Choose a playlist to randomize. For reals.</h1>
+	<h1>Choose a playlist to randomize. For reals.</h1>
 {% endblock %}
 {% block data %}
-			<!-- Single button -->
-			<div class="btn-group">
-				<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					Playlists <span class="caret"></span>
-				</button>
-				<ul class="dropdown-menu">
-					{% for item in sorted_array %}
-						<li><a href="../playlist/{{ item.id }}">{{ item.name }}</a></li>
-					{% endfor %}
-				</ul>
+	<div class="row">
+	{% for item in sorted_array %}
+		<div class="col-sm-6 col-md-4">
+			<div class="thumbnail">
+				<img src="{{ item.images[0].url }}" alt="Playlist Art">
+				<div class="caption">
+					<h3>{{ item.name }}</h3>
+					<p><a href="../playlist/{{ item.id }}" class="btn btn-primary" role="button">Shuffle!</a></p>
+				</div>
 			</div>
+		</div>
+	{% endfor %}
+	</div>
 {% endblock %}
