Remove images from seession, as they fill up the cookie.
- Max cookie size is around 4096 bytes, so we can't store the whole list
  of tracks and shuffled tracks. Added TODO's to address this.

--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -7,7 +7,9 @@
 	{% for item in sorted_array %}
 		<div class="col-sm-6 col-md-4">
 			<div class="thumbnail">
+				{% if item.images %}
 				<img src="{{ item.images[0].url }}" alt="Playlist Art">
+				{% endif %}
 				<div class="caption">
 					<h3>{{ item.name }}</h3>
 					<p><a href="../playlist/{{ item.id }}" class="btn btn-primary" role="button">Shuffle!</a></p>
