Move playlist name form class outside playlist route.

--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block data %}
 	<div class="row">
-	{% for item in sorted_array %}
+	{% for item in playlists %}
 		<div class="col-sm-6 col-md-4">
 			<div class="thumbnail">
 				{% if item.images %}
